@@ -1,80 +1,5 @@
 require File.join(File.dirname(__FILE__), "spec_helper")
 
-describe Sequel::Model::Errors do
-  before do
-    @errors = Sequel::Model::Errors.new
-  end
-  
-  specify "should be clearable using #clear" do
-    @errors.add(:a, 'b')
-    @errors.should == {:a=>['b']}
-    @errors.clear
-    @errors.should == {}
-  end
-  
-  specify "should be empty if no errors are added" do
-    @errors.should be_empty
-    @errors[:blah] << "blah"
-    @errors.should_not be_empty
-  end
-  
-  specify "should return errors for a specific attribute using #on or #[]" do
-    @errors[:blah].should == []
-    @errors.on(:blah).should == []
-
-    @errors[:blah] << 'blah'
-    @errors[:blah].should == ['blah']
-    @errors.on(:blah).should == ['blah']
-
-    @errors[:bleu].should == []
-    @errors.on(:bleu).should == []
-  end
-  
-  specify "should accept errors using #[] << or #add" do
-    @errors[:blah] << 'blah'
-    @errors[:blah].should == ['blah']
-    
-    @errors.add :blah, 'zzzz'
-    @errors[:blah].should == ['blah', 'zzzz']
-  end
-  
-  specify "should return full messages using #full_messages" do
-    @errors.full_messages.should == []
-    
-    @errors[:blow] << 'blieuh'
-    @errors[:blow] << 'blich'
-    @errors[:blay] << 'bliu'
-    msgs = @errors.full_messages
-    msgs.size.should == 3
-    msgs.should include('blow blieuh', 'blow blich', 'blay bliu')
-  end
-
-  specify "should return the number of error messages using #count" do
-    @errors.count.should == 0
-    @errors.add(:a, 'b')
-    @errors.count.should == 1
-    @errors.add(:a, 'c')
-    @errors.count.should == 2
-    @errors.add(:b, 'c')
-    @errors.count.should == 3
-  end
-
-  specify "should return the array of error messages for a given attribute using #on" do
-    @errors.add(:a, 'b')
-    @errors.on(:a).should == ['b']
-    @errors.add(:a, 'c')
-    @errors.on(:a).should == ['b', 'c']
-    @errors.add(:b, 'c')
-    @errors.on(:a).should == ['b', 'c']
-  end
-
-  specify "should return nil if there are no error messages for a given attribute using #on" do
-    @errors.on(:a).should == nil
-    @errors.add(:b, 'b')
-    @errors.on(:a).should == nil
-  end
-end
-
 describe Sequel::Model do
   before do
     @c = Class.new(Sequel::Model) do
